Reworked norway's style.

--- a/_app/_posts/writings/norway/2013-09-11-shortcut.md
+++ b/_app/_posts/writings/norway/2013-09-11-shortcut.md
@@ -1,10 +1,8 @@
 ---
-layout: post
-title: l'instant norvégien
+layout: post-norway
+title: raccourci vers les champignons
 category: norway
 plugin: intense
-desc: jour 6, raccourci vers les champignons
-alt-title: raccourci vers les champignons
 ---
 
 On se réveille à quelques mètres du lac qui est plat comme un
