--- a/_app/_posts/writings/norway/2013-09-12-ja-ja-ja.md
+++ b/_app/_posts/writings/norway/2013-09-12-ja-ja-ja.md
@@ -1,10 +1,8 @@
 ---
-layout: post
-title: l'instant norvégien
+layout: post-norway
+title: ja ja ja
 category: norway
 plugin: intense
-desc: jour 7, ja ja ja
-alt-title: ja ja ja
 ---
 
 > Apparement mentalement affecté par la désillusion de la veille,
