--- a/_app/_posts/writings/norway/2013-09-14-pizza.md
+++ b/_app/_posts/writings/norway/2013-09-14-pizza.md
@@ -1,10 +1,8 @@
 ---
-layout: post
-title: l'instant norvégien
+layout: post-norway
+title: pizza
 category: norway
 plugin: intense
-desc: jour 9, pizza
-alt-title: pizza
 ---
 
 Un réveil dans les nuages de plus au compteur ; il a plu une bonne
