--- a/_app/_posts/writings/norway/2013-09-06-beeeeeh.md
+++ b/_app/_posts/writings/norway/2013-09-06-beeeeeh.md
@@ -1,10 +1,8 @@
 ---
-layout: post
-title: l'instant norvégien
+layout: post-norway
+title: beeeeh!
 category: norway
 plugin: intense
-desc: jour 1, beeeeh!
-alt-title: beeeeh!
 ---
 
 On se fait reveiller par des moutons qui envahissent la forêt au petit
