--- a/_app/_posts/writings/norway/2013-09-07-hein-quoi.md
+++ b/_app/_posts/writings/norway/2013-09-07-hein-quoi.md
@@ -1,10 +1,8 @@
 ---
-layout: post
-title: l'instant norvégien
+layout: post-norway
+title: hein? quoi?
 category: norway
 plugin: intense
-desc: jour 2, hein? quoi?
-alt-title: hein? quoi?
 ---
 
 Lever au milieu de la tundra et comme il a plu et comme j'avais laissé
