Added link between articles for norway's trip.

--- a/_app/_posts/writings/norway/2013-09-06-beeeeeh.md
+++ b/_app/_posts/writings/norway/2013-09-06-beeeeeh.md
@@ -1,7 +1,7 @@
 ---
 layout: post-norway
 title: beeeeh!
-category: norway
+categories: [news, norway]
 plugin: intense
 ---
 
@@ -87,3 +87,5 @@ et je dois pester pendant bien 10 minutes, avant de rentrer dans la
 tente, satisfait d'avoir pointé du doigt l'injustice de ce monde. À ce
 moment il commence juste à pleuvoir, et on s'estime heureux d'avoir eu
 le temps de monter la tente.
+
+[La suite par ici...]({% post_url writings/norway/2013-09-07-hein-quoi %})
