--- a/_app/_posts/writings/norway/2013-09-07-hein-quoi.md
+++ b/_app/_posts/writings/norway/2013-09-07-hein-quoi.md
@@ -1,7 +1,7 @@
 ---
 layout: post-norway
 title: hein? quoi?
-category: norway
+categories: [news, norway]
 plugin: intense
 ---
 
@@ -119,3 +119,5 @@ y avait des choses bizarres dans la soupe aux champignons). En
 rentrant dans la tente, Faltad note qu'il a l'impression d'écraser des
 gateaux à chaque fois qu'il bouge. On s'endort en pensant à
 l'ascension de demain.
+
+[La suite par ici...]({% post_url writings/norway/2013-09-08-dinosaurus %})
