--- a/_app/_posts/writings/norway/2013-09-11-shortcut.md
+++ b/_app/_posts/writings/norway/2013-09-11-shortcut.md
@@ -1,7 +1,7 @@
 ---
 layout: post-norway
 title: raccourci vers les champignons
-category: norway
+categories: [news, norway]
 plugin: intense
 ---
 
@@ -131,3 +131,6 @@ l'endroit le plus classe du monde. On pose la tente dans une forêt
 derrière un talus, à quelques mètres du second camping, genre on va
 tenter de faire baisser le PIB de la Norvège en refusant délibérement de
 ne pas payer le camping car on est aigris.
+
+
+[La suite par ici...]({% post_url writings/norway/2013-09-12-ja-ja-ja %})
