--- a/_app/_posts/writings/norway/2013-09-12-ja-ja-ja.md
+++ b/_app/_posts/writings/norway/2013-09-12-ja-ja-ja.md
@@ -1,7 +1,7 @@
 ---
 layout: post-norway
 title: ja ja ja
-category: norway
+categories: [news, norway]
 plugin: intense
 ---
 
@@ -95,3 +95,6 @@ pain frais garni de cacahuètes et de chocolat après quelques journées
 trop bien, vraiment. On pose la tente pas loin de la rivière Eira qui
 traverse Eresjford, et on finit cette belle journée en grillant des
 saucisses au bord de l'eau, avant de s'endormir, rassasiés.
+
+
+[La suite par ici...]({% post_url writings/norway/2013-09-13-direction-les-fjords %})
