--- a/_app/_posts/writings/norway/2013-09-14-pizza.md
+++ b/_app/_posts/writings/norway/2013-09-14-pizza.md
@@ -1,7 +1,7 @@
 ---
 layout: post-norway
 title: pizza
-category: norway
+categories: [news, norway]
 plugin: intense
 ---
 
@@ -74,3 +74,6 @@ dans les nuages et dans la nuit qui tombe. Le vent souffle énormément,
 on est dans une cuvette et on craint de se retrouver mouillés au matin
 vu qu'il pleut toujours. Et oui, je suis toujours aigri car j'ai
 toujours les pieds mouillés.
+
+
+[La suite par ici...]({% post_url writings/norway/2013-09-15-civilisation %})
