--- a/_app/_posts/projects/2013-03-28-kodama.md
+++ b/_app/_posts/projects/2013-03-28-kodama.md
@@ -3,57 +3,11 @@ layout: post
 title: kodama
 categories: [project]
 plugin: intense
+link: https://github.com/aimxhaisse/kodama
 ---
 
 Kodama is a tiny scripting language to process images. It is primarily
 a toy with no real purpose that I use to improve when I find some
 time. It is currently implemented in go.
 
-## Example
-
-Here's an example of a kodama script:
-
-```bash
-#!/usr/bin/env kodama
-#
-# This file describes the syntax of kodama scripts.
-
-# first step
-with input.jpg as input-processed.jpg
-     vblur 5
-     saturation 10
-     brightness 10
-     resize 800 600
-done
-
-# second step
-with input-processed.jpg as input-processed-thumb.jpg
-     resize 400 300
-done
-```
-
-The syntax is quite self-explanatory; this script is composed of two
-steps:
-
-* the first one takes the input file input.jpg, applies a vertical
-  blur of 5 pixels, then increases the saturation by 10%, then increases
-  the brightness by 10%, and finally resizes the image to 800x600, which
-  is then written to input-processed.jpg.
-* the second one creates a 400x300 thumbnail from input-processed.jpg,
-  which is written to input-processed-thumb.jpg.
-
-## Current filters
-
-The following filter are currently implemented:
-
-* brightness
-* darkness
-* blur
-* horizontal blur
-* vertical blur
-* resize
-* saturation
-
-## In progress
-
-* CR2 decoder (Canon's raw image format)
+More on [github](https://github.com/aimxhaisse/kodama).
