--- a/_app/_posts/projects/2010-06-17-c0depast3r.md
+++ b/_app/_posts/projects/2010-06-17-c0depast3r.md
@@ -1,16 +1,12 @@
 ---
 layout: post
 title: c0depast3r
-categories: [project]
+categories: [project, news]
 plugin: intense
-hidden: true
+link: https://github.com/aimxhaisse/c0depast3r
 ---
 
-A simple pastebin tool with code highlighting and the ability to paste
-code from emacs. Made with the help of
-[Faltad](http://faltad.sbrk.org).
+A pastebin tool with code highlighting and the ability to paste code
+from emacs. Made with the help of [Faltad](http://faltad.sbrk.org).
 
-* Code license: [WTFPL](http://sam.zoy.org/wtfpl/)
-* Tools: [PHP](http://php.net/), [SQLite](http://www.sqlite.org/), [prettify](http://code.google.com/p/google-code-prettify/)
-* Repository: [github](https://github.com/aimxhaisse/c0depast3r)
-* Site: [code.sbrk.org](http://code.sbrk.org)
+More on [github](https://github.com/aimxhaisse/c0depast3r).
