--- a/_app/_posts/projects/2013-03-28-kodama.md
+++ b/_app/_posts/projects/2013-03-28-kodama.md
@@ -1,8 +1,7 @@
 ---
 layout: post
 title: kodama
-categories: [project]
-plugin: intense
+categories: [project, news]
 link: https://github.com/aimxhaisse/kodama
 ---
 
