Few typos on projects.

--- a/_app/_posts/projects/2009-11-29-aimxhos.md
+++ b/_app/_posts/projects/2009-11-29-aimxhos.md
@@ -5,7 +5,7 @@ categories: [project, news]
 link: https://github.com/aimxhaisse/aimxhos
 ---
 
-Aimxhos is a tiny kernel written in C, which does not do anything
+`Aimxhos` is a tiny kernel written in C, which does not do anything
 useful.
 
 More on [github](https://github.com/aimxhaisse/aimxhos).
