--- a/_app/_posts/projects/2010-06-17-c0depast3r.md
+++ b/_app/_posts/projects/2010-06-17-c0depast3r.md
@@ -5,7 +5,8 @@ categories: [project, news]
 link: https://github.com/aimxhaisse/c0depast3r
 ---
 
-A pastebin tool with code highlighting and the ability to paste code
-from emacs. Made with the help of [Faltad](http://faltad.sbrk.org).
+`C0depast3r` is a pastebin tool with code highlighting and the ability
+to paste code from emacs. Made with the help of
+[Faltad](http://faltad.sbrk.org).
 
 More on [github](https://github.com/aimxhaisse/c0depast3r).
