--- a/_app/_posts/projects/2013-03-28-kodama.md
+++ b/_app/_posts/projects/2013-03-28-kodama.md
@@ -5,7 +5,7 @@ categories: [project, news]
 link: https://github.com/aimxhaisse/kodama
 ---
 
-Kodama is a tiny scripting language to process images. It is primarily
+`Kodama` is a tiny scripting language to process images. It is primarily
 a toy with no real purpose that I use to improve when I find some
 time. It is currently implemented in go.
 
