--- a/_app/_posts/projects/2013-04-21-bean.md
+++ b/_app/_posts/projects/2013-04-21-bean.md
@@ -5,6 +5,6 @@ categories: [project, news]
 link: https://github.com/aimxhaisse/bean
 ---
 
-Bean is a tiny template to build websites in Go.
+`Bean` is a tiny template to build websites in Go.
 
 More on [github](https://github.com/aimxhaisse/bean).
