--- a/_app/_posts/writings/2015-01-03-said.md
+++ b/_app/_posts/writings/2015-01-03-said.md
@@ -12,7 +12,7 @@ litres de bière à en croire les canettes vides qui jonchent son
 périmètre.
 
 Il a la tête entre les genoux, et il semble revivre un moment de sa
-journée, il se parle à lui même, où plutôt, il s'observe se raconter
+journée, il se parle à lui même, ou plutôt, il s'observe se raconter
 sa journée à quelqu'un. Sa béquille est allongée en travers du
 trottoir, son sac est devant lui, tout ce qu'il possède est ici. Il
 refuse mes madeleines et je dois insister pour qu'il accèpte que je
