--- a/_app/_posts/writings/2015-01-03-said.md
+++ b/_app/_posts/writings/2015-01-03-said.md
@@ -15,7 +15,7 @@ Il a la tête entre les genoux, et il semble revivre un moment de sa
 journée, il se parle à lui même, ou plutôt, il s'observe se raconter
 sa journée à quelqu'un. Sa béquille est allongée en travers du
 trottoir, son sac est devant lui, tout ce qu'il possède est ici. Il
-refuse mes madeleines et je dois insister pour qu'il accèpte que je
+refuse mes madeleines et je dois insister pour qu'il accepte que je
 les pose à côté de lui. Il a l'air un peu surpris et continue sa
 conversation, sauf que cette fois ci, il ne s'observe pas, il raconte.
 
