--- a/_app/_posts/writings/2015-01-03-said.md
+++ b/_app/_posts/writings/2015-01-03-said.md
@@ -36,7 +36,7 @@ depuis, il ne fait que ça et est saoul en permanence.  Sa main droite
 est paralysée, sa hanche gauche l'empêche de courir, il lui manque de
 plus en plus de dents, pourtant ça ne l'empêche pas de se battre avec
 les reubeux et les renois du coin, il se considère comme raciste. Il
-espère voir Le pen, pour que tous ces rebeux retournent bled.
+espère voir Le pen, pour que tous ces rebeux retournent au bled.
 
 Il m'offre une bière en me disant: "ma maison, c'est ta maison", j'en
 profite pour mettre dans son sac du chocolat, des bonbons et des
